--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,11 @@
   padding: 50px;
   background-color: bisque;
   border-radius: 50%;
-  width: 130px;
-  height: 130px;
-  /* display: flex; */
+  width: 170px;
+  height: 170px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .buttons {
   margin-top: 20px;
@@ -26,7 +28,7 @@
   /* border-style: solid; */
   display: flex;
   flex-direction: column;
-  height: 250px;
+  height: 300px;
   justify-content: space-between;
   align-items: center;
   /* top: -1000px; */
@@ -42,4 +44,7 @@
 .input {
   width: 30px;
   margin-right: 5px;
+}
+.timer {
+  /* border-style: solid; */
 }
