--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,6 @@ html {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: darkcyan;
+  background-color: white;
   /* max-height: fit-content; */
 }
